--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"author": "Carlos Hurtado",
-	"description": "freecodecamp course api and microservices", 
+	"description": "freecodecamp course api and microservices",
+	"keywords": [
+		"freecodecamp",
+		"microservice",
+		"express",
+		"nodejs"
+	],
+	"version": "0.1.0",
+	"license": "GNU",
 	"dependencies": {
-		"express": "^4.14.0"
+		"express": "^4.14.0",
+		"moment": "^2.10.2"
 	},
 	"main": "server.js",
 	"scripts": {
